# graduation

./: main.py
DDPG/: train.py
Fieldsolver2d_hybrid_to_improve/: CMakeLists.txt  build.sh  compare.sh  run_case_bem.sh  run_case_fdm.sh  run_case_frw.sh
Fieldsolver2d_hybrid_to_improve/DataTables_test/: GEx.txt  GEz.txt  Green.txt  Green_comma.txt  preCompute  preCompute.cpp
Fieldsolver2d_hybrid_to_improve/input/: 01.in  02.in  06.in  input_0.data  input_1.data  input_10.data  input_11.data  input_12.data  input_13.data  input_14.data  input_15.data  input_16.data  input_17.data  input_18.data  input_19.data  input_2.data  input_20.data  input_21.data  input_22.data  input_23.data  input_24.data  input_25.data  input_26.data  input_27.data  input_28.data  input_29.data  input_3.data  input_30.data  input_31.data  input_32.data  input_33.data  input_34.data  input_35.data  input_36.data  input_37.data  input_4.data  input_5.data  input_6.data  input_7.data  input_8.data  (+11 more)
Fieldsolver2d_hybrid_to_improve/output/: output_0.out  output_3.out  output_8.out  print_data_pic.py
Fieldsolver2d_hybrid_to_improve/output/backup/: output_0.out  output_1.out  output_2.out  output_4.out  output_5.out  output_6.out  output_7.out
Fieldsolver2d_hybrid_to_improve/output/bem/: output_1.out  output_2.out  output_3.out  output_4.out  output_5.out  output_6.out  output_7.out  output_8.out
Fieldsolver2d_hybrid_to_improve/run_case/: bem_run_case.sh  fdm_run_case.sh  frw_run_case.sh
Fieldsolver2d_hybrid_to_improve/src/: bem.cc  common.h  fdm.cc  fieldsolver2d.cc  tags
RL/: TestSet.py  (+5 more)
(+41 files in other folders)
